# pkmn-sprite-scrape

./: .env  Cargo.toml  README.md
src/: main.rs
