[package]
name = "pkmn-sprite-scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
again = "0.1.2"
color-eyre = "0.6.2"
futures = "0.3.25"
once_cell = "1.17.0"
reqwest = { version = "0.11.13", features = [ "stream" ] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"